--- a/HelloWorldv2/webapp/view/App.view.xml
+++ b/HelloWorldv2/webapp/view/App.view.xml
@@ -1,4 +1,9 @@
 <mvc:View
 	xmlns="sap.m"
 	xmlns:mvc="sap.ui.core.mvc">
+	<Text text="This view is loaded from view-->File"/>
+	<Button
+		text="Say Hello"
+		press="onShowHellow"/>
 </mvc:View>
+
