--- a/HelloWorldv2/webapp/view/App.view.xml
+++ b/HelloWorldv2/webapp/view/App.view.xml
@@ -1,4 +1,5 @@
 <mvc:View
+	controllerName="sandesh.controller.App"
 	xmlns="sap.m"
 	xmlns:mvc="sap.ui.core.mvc">
 	<Text text="This view is loaded from view-->File"/>
