--- a/HelloWorldv2/webapp/view/App.view.xml
+++ b/HelloWorldv2/webapp/view/App.view.xml
@@ -9,7 +9,7 @@
 		
 	<Input
 		value="{/recipient/name}"
-		description="Hello{/recipient/name}"
+		description="{/recipient/name}"
 		valueLiveUpdate="true"
 		width="60%"/>
 </mvc:View>
