--- a/HelloWorldv2/webapp/view/App.view.xml
+++ b/HelloWorldv2/webapp/view/App.view.xml
@@ -1,16 +1,30 @@
 <mvc:View
 	controllerName="sandesh.controller.App"
 	xmlns="sap.m"
-	xmlns:mvc="sap.ui.core.mvc">
+	xmlns:mvc="sap.ui.core.mvc"
+	displayBlock="true">
 	<!--<Text text="View loaded from view.xml"/>-->
-	<Button
-		text="{i18n>showHelloButtonText}"
-		press="onShowHellow"/>
-		
-	<Input
-		value="{/recipient/name}"
-		description="World{/recipient/name}"
-		valueLiveUpdate="true"
-		width="60%"/>
+	<App>
+		<pages>
+			<Page title="{i18n>homePageTitle}">
+				<content>
+					<Panel
+						headerText="{i18n>helloPanelTitle}">
+						<content>
+							<Button
+								text="{i18n>showHelloButtonText}"
+								press="onShowHellow"/>
+								
+							<Input
+								value="{/recipient/name}"
+								description="World{/recipient/name}"
+								valueLiveUpdate="true"
+								width="60%"/>
+						</content>
+					</Panel>
+				</content>
+			</Page>
+		</pages>
+	</App>
 </mvc:View>
 
