--- a/HelloWorldv2/webapp/view/App.view.xml
+++ b/HelloWorldv2/webapp/view/App.view.xml
@@ -9,17 +9,22 @@
 			<Page title="{i18n>homePageTitle}">
 				<content>
 					<Panel
-						headerText="{i18n>helloPanelTitle}">
+						headerText="{i18n>helloPanelTitle}"
+						class="sapUiResponsiveMargin"
+						width="auto">
 						<content>
 							<Button
 								text="{i18n>showHelloButtonText}"
-								press="onShowHellow"/>
+								press="onShowHellow"
+								class="sapUiSmallMarginEnd"/>
 								
 							<Input
 								value="{/recipient/name}"
-								description="World{/recipient/name}"
 								valueLiveUpdate="true"
 								width="60%"/>
+							<Text
+								text="Hello {/recipient/name}"
+								class="sapUiSmallMargin"/>
 						</content>
 					</Panel>
 				</content>
