--- a/HelloWorldv2/webapp/view/App.view.xml
+++ b/HelloWorldv2/webapp/view/App.view.xml
@@ -8,6 +8,8 @@
 		<pages>
 			<Page title="{i18n>homePageTitle}">
 				<content>
+					<mvc: XMLView viewName="sandesh.view.HelloPanel"/>
+				<!--	Panel code below is now implemented in a seperate view i.e. HelloPanel.view.xml
 					<Panel
 						headerText="{i18n>helloPanelTitle}"
 						class="sapUiResponsiveMargin"
@@ -25,7 +27,7 @@
 							<FormattedText
 								htmlText="Hello {/recipient/name}"
 								class="sapUiSmallMargin sapThemeHighlight-asColor myCustomText"/> 	
-						<!--	Logic below is now implemented in the Formatted text via CSS classes
+							Logic below is now implemented in the Formatted text via CSS classes
 								<Text
 								text="Hello {/recipient/name}"
 								class="sapUiSmallMargin"/>-->
