--- a/HelloWorldv2/webapp/view/App.view.xml
+++ b/HelloWorldv2/webapp/view/App.view.xml
@@ -8,7 +8,7 @@
 		<pages>
 			<Page title="{i18n>homePageTitle}">
 				<content>
-					<mvc: XMLView viewName="sandesh.view.HelloPanel"/>
+					<mvc:XMLView viewName="sandesh.view.HelloPanel"/>
 				<!--	Panel code below is now implemented in a seperate view i.e. HelloPanel.view.xml
 					<Panel
 						headerText="{i18n>helloPanelTitle}"
@@ -32,8 +32,8 @@
 								text="Hello {/recipient/name}"
 								class="sapUiSmallMargin"/>-->
 						</content>
-					</Panel>
-				</content>
+				<!--	</Panel>-->
+				<!--</content>-->
 			</Page>
 		</pages>
 	</App>
