--- a/HelloWorldv2/webapp/view/HelloDialog.fragment.xml
+++ b/HelloWorldv2/webapp/view/HelloDialog.fragment.xml
@@ -4,5 +4,10 @@ xmlns:core="sap.ui.core">
 	<Dialog
 		id="helloDialog"
 		title="Hello {/recipient/name}">
+		<beginButton>
+        	<Button
+            	text="{i18n>dialogCloseButtonText}"
+            	press="onCloseDialog"/>
+    	</beginButton>
 	</Dialog>
 </core:FragmentDefinition>
