--- a/HelloWorldv2/webapp/view/HelloDialog.fragment.xml
+++ b/HelloWorldv2/webapp/view/HelloDialog.fragment.xml
@@ -4,6 +4,12 @@ xmlns:core="sap.ui.core">
 	<Dialog
 		id="helloDialog"
 		title="Hello {/recipient/name}">
+		<content>
+         <core:Icon
+            src="sap-icon://bar-code"
+            size="8rem"
+            class="sapUiMediumMargin"/>
+      </content>
 		<beginButton>
         	<Button
             	text="{i18n>dialogCloseButtonText}"
