--- a/HelloWorldv2/webapp/view/HelloPanel.view.xml
+++ b/HelloWorldv2/webapp/view/HelloPanel.view.xml
@@ -8,19 +8,26 @@
       width="auto" >
       <content>
          <Button
+         text="{i18n>rightButtonText}"
+         icon="sap-icon://arrow-right"/>
+         
+         <Button
          id="helloDialogButton"
          icon="sap-icon://world"
          text="{i18n>openDialogButtonText}"
          press="onOpenDialog"
          class="sapUiSmallMarginEnd"/>
+         
          <Button
             text="{i18n>showHelloButtonText}"
             press="onShowHello"
             class="myAppDemoWT myCustomButton"/>
+         
          <Input
             value="{/recipient/name}"
             valueLiveUpdate="true"
             width="60%"/>
+         
          <FormattedText
             htmlText="Hello {/recipient/name}"
             class="sapUiSmallMargin sapThemeHighlight-asColor myCustomText"/>
